Se sube clase 23 Actualizada

--- a/Clase 23 Avanzado Parte 2 ACTUALIZADO/AppCoder/templates/AppCoder/padre.html
+++ b/Clase 23 Avanzado Parte 2 ACTUALIZADO/AppCoder/templates/AppCoder/padre.html
@@ -34,7 +34,8 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'Cursos' %}">Cursos</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'Entregables' %}">Entregables</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'Login' %}">Iniciar sesión</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Crear cuenta</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'Register' %}">Crear cuenta</a></li>
+                        <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
                     </ul>
                 </div>
             </div>
